	client yet), temp: normal santa hat (20)
	2653,Sacrifice_Ring: seems eAthena doesn't have bonus option yet <- explain how this works so I can code it in. [Skotlex]
		* * * On your death it breaks (BS can fix it), you drop all Equipment (equipped, even the ring). And revive with 1 HP / 1 SP at the place of your death.

12/12
	* Fixed some items, such as Kafra Ring. Also updated accessaries.
	  Novices/Super Novices are not allowed to wear lots of accessaries. [Vicious]
	* Changed available jobs for some items. If it is wrong job...
	  Blame Item'o'luper since I used it. XD Doubt it is wrong though. [Vicious]
	* Changed Marionette's blowcount to 0 rather than 1... [Skotlex]
	* Added EOL before '//SG_FUSION#Union of the Sun, Moon and Stars#' in skill_tree.txt [Komurka]
	  Dunno what's wrong but ... before server hasn't been reading SG_FUSION skill at all -.-
12/11
	* Corrected again the mvp exp percent of Lighthalzen bosses (max is 10000
	  = 100%, why was it set to 700000? Made 7000 = 70%) [Skotlex]
	* TKs, SGs and SLs should now be able to use berserk potions. [MasterOfMuppets]
	* Added missing quantity value to Herb Tea With Grape Juice and Barbecue, thanks to Haplo [Lupus]
12/10
	* Removed V_poring from dead branch, it's a boss monster >.> [MasterOfMuppets]
	* Added slot to angel's kiss [Kayla]
	* Updated some items to allow soullinkers wear them, thanks to lunaus [MasterOfMuppets]
	  for all the work.
	* Fixed the aftercast delay of lex divina, thanks to marquis007. [MasterOfMuppets]
	* Updated the sell/buy price of some Homunculus related items [MasterOfMuppets]
12/09
	* Made Berserk Pitcher Potion-Pitcher-like. [Vicious]
	* Fixed 5125, Angel's Kiss. Should be novice only. Good eye Kholdstare! [Kayla]
	* Updated skill_db and skill_require_db info for Soul Linker skills, thanks
	  to Reddozen to provide the information. [Skotlex]
	* Updated skill_db SL skills pl to -2 where appropiate (-2 = take